# foundational-brain

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
configs/: default.yaml
docs/: data_report.json  data_report.md  explainer.html  index.html  latent_sweep.json  latent_sweep_report.md  loss_weight_sweep.json  loss_weight_sweep_report.md  pretrain_report.md  pretrain_results.json  probe_connectivity_report.md  probe_connectivity_results.json  probe_report.md  probe_results.json  site_tr.json
docs/assets/: viz_data.json
scripts/: build_site.py  explore_data.py  fetch_site_tr.py  make_visuals.py  pretrain.py  probe_connectivity.py  probe_features.py  sweep_latent_dim.py  sweep_loss_weights.py
src/foundational_brain/: __init__.py
src/foundational_brain/data/: __init__.py  dataset.py  download.py  parcellate.py  pipeline.py  sites.py  stats.py
src/foundational_brain/eval/: __init__.py  baselines.py  compare.py  features.py  probe.py
src/foundational_brain/models/: __init__.py  decoder.py  encoder.py  foundation_model.py  latent_rnn.py
src/foundational_brain/training/: __init__.py  losses.py  trainer.py
tests/: test_baselines.py  test_compare.py  test_dataset.py  test_features.py  test_losses.py  test_probe.py  test_stats.py  test_trainer.py
