[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foundational-brain"
version = "0.0.1"
description = "A self-supervised foundation model for fMRI: encoder + latent RNN dynamics + decoder"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
